examples/type_system/failing/67_adt_multi_arity_nested_non_exhaustive.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/67_adt_multi_arity_nested_non_exhaustive.flx
// error[E015]: Non-Exhaustive Match
//
// Match is not exhaustive: 1 missing pattern.
//
//   examples/type_system/failing/67_adt_multi_arity_nested_non_exhaustive.flx:39:5
//    |
// 39 |     match w {
//    |     ^^^^^^^^^
// 40 |         Pair(OkI(v), _) -> v,
//    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
// 41 |         Empty -> 0,
//    | ^^^^^^^^^^^^^^^^^^^
// 42 |     }
//    | ^^^^^
//
// Hint:
//   Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E015

// E083: nested constructor coverage must hold per constructor field (multi-arity constructor).

data ResultI {
    OkI(Int),
    ErrI(Int),
}

data Wrap2 {
    Pair(ResultI, ResultI),
    Empty,
}

fn score(w: Wrap2) -> Int {
    match w {
        Pair(OkI(v), _) -> v,
        Empty -> 0,
    }
}

fn main() {
    score(Empty)
}
